# nom-stats

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  check_data_entries.py  check_ingredients_csv.py  check_recipe_yamls.py  create_tables.sql  fetch_off_ingredients.py  generate_static.py  generate_static_website.py  ingredients.csv  insert.sql  local_testing_script.py  mermaid_erd.mermaid  off_ingredients.csv  off_ingredients.csv.checkpoint.json  per_ingredient.sql  pyproject.toml  reconcile_ingredients.py  requirements.txt  total.sql  v_per_ingredient.sql  v_per_meal_prep.sql  validate_ingredients_file.py  view.sql
archived_recipes/: blushin_russian.yaml  gochujang_risotto.yaml  legendary_superasian_broccoli.yaml  legendary_superasian_broccoli_vega.yaml  pizza_bbq_pulled_pork_vega.yaml  pizza_caprese_truffel.yaml  puffy_pesto_pillows.yaml
azure-infrastructure/: azure-cli-create.sh
back_end/: create_tables.sql  create_tables_and_views.sql  mermaid_erd.mermaid  v_per_ingredient.sql  v_per_meal_prep.sql
configuration/: chili_con_carne.yaml  chili_sin_carne.yaml  gochujang_risotto.yaml  ingredients.csv  ingredients.yaml  lasagna.yaml  lasagna_vega.yaml  legendary_superasian_broccoli.yaml  legendary_superasian_broccoli_vega.yaml  mean_grean_pesto_machine.yaml  mean_grean_pesto_machine_vega.yaml  mean_green_pesto_machine.yaml  mean_green_pesto_machine_vega.yaml  pannenkoeken.yaml  pannenkoeken_vega.yaml  pizza_bbq_pulled_pork_vega.yaml  pizza_bolognese.yaml  pizza_caprese.yaml  pizza_caprese_truffel.yaml  puffy_pesto_pillows.yaml  tacocat.yaml  (+3 more)
(+118 files in other folders)
